kubernetes/matverseny-frontend/matverseny-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matverseny-frontend
  namespace: matverseny-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: matverseny-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: matverseny-frontend
    spec:
      containers:
        - name: matverseny-frontend
          image: verseghy/matverseny-frontend
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: 2Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: matverseny-frontend
  namespace: matverseny-frontend
spec:
  selector:
    app: matverseny-frontend
  ports:
    - name: matverseny-frontend
      protocol: TCP
      port: 80
      targetPort: 80
