kubernetes/matverseny-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
  namespace: matverseny-frontend
spec:
  rules:
    - host: 193.verseghy-gimnazium.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matverseny-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - 193.verseghy-gimnazium.net
      secretName: ingress-tls
